Fix module card align issue

--- a/assets/src/admin.scss
+++ b/assets/src/admin.scss
@@ -21,6 +21,9 @@
 
 }
 
+/*=============================
+Module Card Style
+=============================*/
 .site-card-wrapper {
     .sgsb-module-card {
         border-radius: 8px;
@@ -99,6 +102,9 @@
             border-radius: 8px;
             padding: 14px;
             margin-right: 7px;
+            width: 64px;
+            height: 64px;
+
         }
         .module-name {
             font-weight: 500;
@@ -112,11 +118,16 @@
             font-size: 16px;
             line-height: 28px;
             padding: 0 23px 7px;
+            height: 62px;
+            overflow: hidden;
 
         }
     }
 }
 
+/*=============================
+Pagination Style
+=============================*/
 .sgsb__module-pagination {
     li {
         min-width: 47px;
